# GUI622

./: CHANGELOG.md  CMakeLists.txt  HUICHUAN_CONNECTION_FLOW.md  autocalibrationwidget.cpp  autocalibrationwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  robot_connection_huichuan.ini  robot_connection_yinglian.ini  robotpreviewwidget.cpp  robotpreviewwidget.h  workpieceselectionwidget.cpp  workpieceselectionwidget.h
cpp/interface/: nrc_compat.cpp  nrc_interface.h  nrc_io.h  nrc_job_operate.h
cpp/parameter/: nrc_define.h  nrc_interface_parameter.h
doc/: 英联机械臂SDK接口说明_合并版.docx
model/: model_mapping.txt
robot_sdk/cpp/: backend_bridge.h  huichuan_arm_actions.cpp  huichuan_backend.cpp  robot_adapter.cpp  robot_adapter.h  robot_arm_actions.cpp  robot_arm_actions.h  robot_arm_actions_backend.h  yinglian_arm_actions.cpp  yinglian_backend.cpp
robot_sdk/cpp/interface/: nrc_interface.h  nrc_io.h  nrc_job_operate.h
robot_sdk/cpp/parameter/: nrc_define.h
robot_sdk/huichuan/: IMC100API.h  远程以太网控制功能用户手册.docx
robot_sdk/huichuan/cpp/interface/: nrc_interface.h  nrc_io.h  nrc_job_operate.h
robot_sdk/huichuan/cpp/parameter/: nrc_define.h
robot_sdk/huichuan/x64/: IMC100API.lib
robot_sdk/yinglian/cpp/interface/: nrc_api.h  nrc_craft_conveyor_belt_track.h  nrc_craft_laser_cutting.h  nrc_craft_pallet.h  nrc_craft_vision.h  nrc_craft_weld.h  nrc_dual_arm.h  nrc_interface.h  nrc_io.h  nrc_job_operate.h  nrc_modbus.h  nrc_queue_operate.h  nrc_track.h  nrc_vfd_ctr.h
robot_sdk/yinglian/cpp/parameter/: nrc_craft_conveyor_belt_track_parameter.h  nrc_craft_laser_cutting_parameter.h  nrc_craft_vision_parameter.h  nrc_craft_weld_parameter.h  nrc_define.h  nrc_interface_parameter.h  nrc_io_parameter.h  nrc_modbus_parameter.h  nrc_parameter.h
